--- a/app/templates/smartcenter.html
+++ b/app/templates/smartcenter.html
@@ -87,8 +87,22 @@
                 <h3>决策支持</h3>
                 <p>基于数据分析提供决策建议。</p>
                 <button onclick="location.href='decision_support'">查看详情</button>
-            </div>
+            </div>  
+            <div class="module">
+                <h3>鱼类体长预测</h3>
+                <p>基于图片识别技术进行鱼类体长预测。</p>
+                <button onclick="location.href='length_predict'">查看详情</button>
         </div>
+        <div class="module">
+            <h3>对话</h3>
+            <p>简单问答。</p>
+            <button onclick="location.href='chat'">查看详情</button>
+        </div>
+        <div class="module">
+            <h3>图片提问</h3>
+            <p>简单问答。</p>
+            <button onclick="location.href='image'">查看详情</button>
+    </div>
     </div>
 </body>
 <script>
