--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -34,7 +34,9 @@
 <body>
     <div class="info-content">
         <h2>主要信息</h2>
-        <p>此处显示主要信息数据的可视化图表。</p>
+<!--        <p>此处显示主要信息数据的可视化图表。</p>-->
+        <iframe src="{{ url_for('static', filename='fish-species.html') }}" width="600px" height="400px"></iframe>
+
     </div>
 </body>
 
