--- a/app/templates/underwater.html
+++ b/app/templates/underwater.html
@@ -38,7 +38,7 @@
     <div class="underwater-content">
         <h2>水下系统</h2>
         <video controls>
-            <source src="video.mp4" type="video/mp4">
+            <source src="{{url_for('static',filename = 'video.mp4')}}" type="video/mp4">
             您的浏览器不支持视频播放。
         </video>
     </div>
